--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import { trySerializeLocals } from 'astro/middleware';
 	<main class="w-full min-h-screen flex justify-center items-center">
 		<div class="flex flex-col gap-y-4">
 			<h1 class="text-4xl">DOWNLOAD now !!!!</h1>
-			<a href="/shit-8.jar" target="_blank" download="Gean" rel="noreferrer">
-				<div class="flex w-5 w-full">
+			<a href="https://drive.google.com/file/d/1SYYHl6PnGcctWy-KTnJAuboY3fyY7azD/view?usp=sharing" target="_blank" download="Gean" rel="noreferrer">
+				<div class="flex w-full">
 					<img src="/arrow-down-tray.jpg" alt="wtf" width="100" class="">
 				</div>
 			</a>
