--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { trySerializeLocals } from 'astro/middleware';
 					<img src="/arrow-down-tray.jpg" alt="wtf" width="100" class="">
 				</div>
 			</a>
-			<p class="text-red-500">java -jar --module-path {"{"}javafx lib path{"}"} --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media shit8th.jar</p>
+			<p class="text-red-500">java -jar --module-path {"{"}javafx lib path{"}"} --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media shit8th.jar&</p>
 			<a href="https://gluonhq.com/products/javafx/" class="text-gray-100">Click here : https://gluonhq.com/products/javafx/</a>
 		</div>
 	</main>
